apps/site/web/static/css/_fares.scss
.fareview {
  h1 {
    margin-bottom: 1rem;
  }
}

.reduced-fare-note {
  background-color: $gray-lightest;
}

.fares-tab-group {
  border-bottom: $space-2 solid $brand-primary;
  margin: 1em 0 0;
}

.fares-tab {
  display: inline-block;
  margin-bottom: -1 * $space-2;
  padding: $space-6 $space-12;

  @include media-breakpoint-down(xs) {
    width: 100%;
  }
}

.fares-tab-selected {
  background-color: $brand-primary;
  color: $white;

  @include media-breakpoint-down(xs) {
    &:only-child {
      display: block;
    }
  }
}

a {
  &.fares-tab-selected {
    @include hover-focus-active {
      color: $white;
      text-decoration: underline;
    }
  }
}

.fares-box {
  border: solid .375rem $brand-primary;
  padding: .0625rem .375rem;
}

.fares-row {
  border-top: 1px solid $gray-lightest;

  &:first-child {
    border-top: 0;
  }
}

.fare-name {
  display: inline-block;
  padding-bottom: .5rem;
}

.fare-price {
  display: inline-block;
  float: right;
  margin-top: -.5rem;
  padding: .5em;
}

.fares-box-column {
  //scss-lint:disable PlaceholderInExtend
  @extend .col-xs-12;
  @extend .col-sm-6;
  padding: .75rem;

  @include media-breakpoint-down(xs) {
    border-top: 1px solid $gray-lightest;

    &:first-child {
      border-top: 0;
    }
  }

  @include media-breakpoint-up(sm) {
    &:nth-child(1) {
      border-right: 1px solid $gray-lightest;
    }

    &:nth-child(2) {
      border-left: 1px solid $gray-lightest;
      left: -1px;
      position: relative;
    }
  }

  @include media-breakpoint-up(md) {
    padding: 1.5rem;
  }
}

.fares-mode-icon {
  width: 100%;

  .route-icon {
    @include route-icon(1.5rem);
    float: none;
    margin-right: .5rem;

    &:last-child {
      margin-right: 0;
    }
  }
}

.fares-ticket-description {
  margin-bottom: 1.5rem;
}

.fare-mode-row {
  background-color: $gray-lightest;
  margin-bottom: .75rem;
  padding: .5rem;

  @include media-breakpoint-only(sm) {
    font-size: .85rem;
  }

  @include media-breakpoint-only(xs) {
    font-size: .85rem;
  }
}

.adult-fares-tab {
  padding: .5rem;
}

.fare-callout-box {
  background-color: $gray-lightest;
  padding: .5rem;

  &:empty {
    display: none;
  }
}

.fare-travel-routes {
  margin-bottom: 1rem;
}

.fares-google-play {
  display: inline-block;
  vertical-align: baseline;
}

.fares-callout-row {
  display: flex;
  flex-wrap: wrap;
}

.fares-callout-container {
  display: flex;
  flex-direction: column;

  @include media-breakpoint-down(sm) {
    &:first-child {
      margin-bottom: .5em;
    }
  }
}

.fares-callout {
  color: $white;
  font-weight: lighter;
  height: 100%;
  padding: 1.5em;
  text-align: center;

  .btn {
    background-color: initial;
    border-color: $white;
    color: $white;
  }

  h3 {
    font-weight: initial;
  }

  .line {
    border-color: $white;
    width: 150px;
  }

  &.fares-callout-corporate {
    background-color: $gray-light;
  }

  &.fares-callout-reduced {
    background-color: $brand-primary-dark;
  }
}

.fares-zone-map-link {
  padding: .5rem .125rem 0;
}

.fares-info-column {
  padding: 1rem .375rem;
}

.row {
  @include media-breakpoint-up(sm) {
    .fares-info-column:nth-child(1) {
      padding-right: 2rem;
    }

    .fares-info-column:nth-child(2) {
      padding-left: 2rem;
    }
  }
}

.charlie-card-hours {
  border: $space-1 solid $gray-lightest;
  padding: 0;

  .hours-header {
    background-color: $gray-lightest;
    font-weight: bold;
    padding: .5em;
  }

  .hours-body {
    padding: .5em .5em 0;
  }
}

.charlie-card-link {
  border-top: 1px solid $gray-lightest;
  display: block;
  padding: .75em .5em;

  .charlie-card-truncate {
    @include truncate();
  }

  @include media-breakpoint-up(md) {
    &:last-child {
      border-bottom: 1px solid $gray-lightest;
    }
  }
}

@include media-breakpoint-down(sm) {
  .charlie-card-link-container ~ .charlie-card-link-container {
    margin-bottom: 1em;

    .charlie-card-link:last-child {
      border-bottom: 1px solid $gray-lightest;
    }
  }
}

@include media-breakpoint-up(md) {
  .charlie-card-link-container {
    padding-right: 1.5em;
  }

  .charlie-card-link-container ~ .charlie-card-link-container {
    padding-left: 1.5em;
    padding-right: .375em;
  }
}

.fare-summary-header {
  display: inline-block;

  .fares-mode-icon {
    margin-left: $space-12;
    position: relative;
    top: -1 * $space-2;
  }
}

.fare-summary-row {
  margin-bottom: $space-6;

  @include media-breakpoint-down(xs) {
    font-size: .85rem;
  }
}

.fare-summary-price {
  float: right;
}

.payment-method-modes {
  margin-left: .5rem;

  .mbta-custom-icon {
    margin-right: .0375rem;
  }
}

.payment-method {
  border-bottom: 1px solid $gray-lightest;
  margin-bottom: 1.75rem;
  padding-bottom: .75rem;

  &:last-child {
    border-bottom: none;
    margin-bottom: 0;
  }

  .charlie-ticket-image {
    display: inline-block;
    width: 250;

    img {
      margin-top: .5rem;
    }

    .ticket-description {
      margin-top: .5rem;
      text-align: center;
    }
  }
}

.payment-image {
  @include media-breakpoint-down(sm) {
    margin-top: 1rem;
  }
}

.content-section {
  margin-bottom: 3rem;
}

.fares-related-page {
  border: 1px solid $gray-lightest;
  border-left: 0;
  padding: .5em 1em;
  position: relative;

  &::before {
    border-left: 4px solid $brand-primary-dark;
    content: ' ';
    display: block;
    height: calc(100% + 2px);
    left: 0;
    position: absolute;
    top: -1px;
  }
}

